src/objects/Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Tactic2__c</fullName>
        <description>Tactic #2 to accomplish the Objective and Strategy</description>
        <inlineHelpText>Tactic #2 to accomplish the Objective and Strategy</inlineHelpText>
        <label>Tactic2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tactic_3__c</fullName>
        <description>Tactic #3 to accomplish the Objective and Strategy</description>
        <inlineHelpText>Tactic #3 to accomplish the Objective and Strategy</inlineHelpText>
        <label>Tactic 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tactic_4__c</fullName>
        <description>Tactic #4 to accomplish the Objective and Strategy</description>
        <inlineHelpText>Tactic #4 to accomplish the Objective and Strategy</inlineHelpText>
        <label>Tactic 4</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tactic_5__c</fullName>
        <description>Tactic #5 to accomplish the Objective and Strategy</description>
        <inlineHelpText>Tactic #5 to accomplish the Objective and Strategy</inlineHelpText>
        <label>Tactic 5</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Values__c</fullName>
        <description>Key Decider&apos;s Overal Pain, Needs &amp; Wants as it relates to Technical Values</description>
        <inlineHelpText>Key Decider&apos;s Overal Pain, Needs &amp; Wants as it relates to Technical Values</inlineHelpText>
        <label>Technical Values</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>The_customer_will_be_able_to__c</fullName>
        <description>Value Proposition Factor - What are the customer goals?</description>
        <inlineHelpText>Value Proposition Factor - What are the customer goals?</inlineHelpText>
        <label>The customer will be able to</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>&quot;Considerations: Deadline pressure, Where it buying process, Pilot or trial, Order placement date, Implementation/installation plan, Are your resources available in time frame?
2 Optimal
0 Doable
2 Unreasonable&quot;</description>
        <inlineHelpText>&quot;Considerations: Deadline pressure, Where it buying process, Pilot or trial, Order placement date, Implementation/installation plan, Are your resources available in time frame?
2 Optimal
0 Doable
2 Unreasonable&quot;</inlineHelpText>
        <label>Timeframe  (2 to -2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Record_Similar_Solutions__c</fullName>
        <description>&quot;Considerations: Prior experience with similar Solutions, Strengths/weaknesses/quality of prior solutions, Referenceability of prior solutions, Industry leader or follower
+3 We have much more success
0 Parity
-3 They have much more success&quot;</description>
        <inlineHelpText>&quot;Considerations: Prior experience with similar Solutions, Strengths/weaknesses/quality of prior solutions, Referenceability of prior solutions, Industry leader or follower
+3 We have much more success
0 Parity
-3 They have much more success&quot;</inlineHelpText>
        <label>Track Record Similar Solutions  (3 to -3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Record_vs_Competitor__c</fullName>
        <description>&quot;Considerations: Quality, Resources, Determination, Expertise, Met this comptitor before, Know competitor&apos;s &amp; people approach
+2 We usually win
0 Toss-up
-2 They usually win&quot;</description>
        <inlineHelpText>&quot;Considerations: Quality, Resources, Determination, Expertise, Met this comptitor before, Know competitor&apos;s &amp; people approach
+2 We usually win
0 Toss-up
-2 They usually win&quot;</inlineHelpText>
        <label>Track Record vs. Competitor  (2 to -2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Record_with_Customer__c</fullName>
        <description>&quot;Considerations: Business share, Current agreements, Value of prior solutions, Past successes, Past problems
+3 We usually win
0 Toss-up
-3 They usually win&quot;</description>
        <inlineHelpText>&quot;Considerations: Business share, Current agreements, Value of prior solutions, Past successes, Past problems
+3 We usually win
0 Toss-up
-3 They usually win&quot;</inlineHelpText>
        <label>Track Record with Customer  (3 to -3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Amount__c</fullName>
        <formula>Your_Probability_of_Success__c *  Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_are_you_selling1__c</fullName>
        <description>What are you selling? 1)</description>
        <inlineHelpText>What are you selling? 1)</inlineHelpText>
        <label>What are you selling1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_are_you_selling2__c</fullName>
        <description>What are you selling? 2)</description>
        <inlineHelpText>What are you selling? 2)</inlineHelpText>
        <label>What are you selling2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_are_you_selling3__c</fullName>
        <description>What are you selling? 3)</description>
        <inlineHelpText>What are you selling? 3)</inlineHelpText>
        <label>What are you selling3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>With_economic_payback_achieved_by__c</fullName>
        <description>Timeframe</description>
        <inlineHelpText>Timeframe</inlineHelpText>
        <label>With economic payback achieved by</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Your_Critical_Deadlines__c</fullName>
        <description>From YOUR Perspective, what are the ciritcal deadlines?</description>
        <inlineHelpText>From YOUR Perspective, what are the ciritcal deadlines?</inlineHelpText>
        <label>Your Critical Deadlines</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Your_Deal_Motivators_Key_Business_Issues__c</fullName>
        <description>From Your Perspective, what are the Deal Motivators?</description>
        <inlineHelpText>From Your Perspective, what are the Deal Motivators?</inlineHelpText>
        <label>Your Deal Motivators/Key Business Issues</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Your_Probability_of_Success_Beat__c</fullName>
        <description>What do you consider to be your probability of success?</description>
        <formula>Your_Probability_of_Success__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What do you consider to be your probability of success?</inlineHelpText>
        <label>Your Probability of Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Your_Probability_of_Success_Connect__c</fullName>
        <description>What do you consider to be your probability of success?</description>
        <formula>Your_Probability_of_Success__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What do you consider to be your probability of success?</inlineHelpText>
        <label>Your Probability of Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Your_Probability_of_Success_GoNoGo__c</fullName>
        <description>What do you consider to be your probability of success?</description>
        <formula>Your_Probability_of_Success__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What do you consider to be your probability of success?</inlineHelpText>
        <label>Your Probability of Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Your_Probability_of_Success_Win__c</fullName>
        <description>What do you consider to be your probability of success?</description>
        <formula>Your_Probability_of_Success__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What do you consider to be your probability of success?</inlineHelpText>
        <label>Your Probability of Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Your_Probability_of_Success__c</fullName>
        <description>What do you consider to be your probability of success?</description>
        <inlineHelpText>What do you consider to be your probability of success?</inlineHelpText>
        <label>Your Probability of Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Your_Value_Proposition__c</fullName>
        <description>From Your Perspective, What is your Value Proposition?</description>
        <inlineHelpText>From Your Perspective, What is your Value Proposition?</inlineHelpText>
        <label>Your Value Proposition</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Tracker</label>
    <nameField>
        <label>Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>